[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transit-schedule"
version = "5.0.1"
description = "Multi-transit Bus Schedule HTTP and MQTT provider"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/richie256/transit-schedule"
Repository = "https://github.com/richie256/transit-schedule"

dependencies = [
    "paho-mqtt",
    "requests",
    "python-json-logger",
    "pandas>=2.1.4",
    "Flask>=3.1.3",
    "gunicorn>=23.0.0",
    "beautifulsoup4",
    "pip-system-certs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "freezegun",
    "httpx",
    "ruff",
]

[project.scripts]
transit-schedule = "transit_schedule.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "N816"]

[tool.ruff.lint.isort]
known-first-party = ["transit_schedule"]
